test/sema/out_param/out_param_generics.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S<T> {}

fn foo<T>() {}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:6: error: only parameters can have '*' type
  S@<*number>{};

  // CHECK: [[# @LINE + 1 ]]:8: error: only parameters can have '*' type
  foo@<*number>();
}
